fixed short descrip and button positioning on small screen

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -36,9 +36,6 @@ body {
   object-fit: contain;
   height: 100%;
 }
-.card-text {
-  /* font-size: 0.9rem; */
-}
 .details-main {
   width: 90%;
   padding: 0 30px 30px 30px;
@@ -63,12 +60,14 @@ body {
 .detail-name-price {
   padding: 0 20px;
   width: 60%;
+  flex-direction: column;
+  justify-content: center;
 }
-.price,
-.short-description,
-.long-description,
-.btn {
-  font-size: 0.8rem;
+.name-price {
+  flex-direction: column;
+}
+.price-description {
+  flex-direction: column;
 }
 .no-details {
   height: 400px;
@@ -82,7 +81,6 @@ body {
   color: rgb(250, 250, 250);
 }
 .added-to-cart {
-  font-size: 0.8rem;
   margin-top: 7px;
   justify-content: space-between;
 }
@@ -160,8 +158,21 @@ body {
     align-items: center;
     margin-top: 10px;
   }
+  .name-price {
+    flex-direction: row;
+    align-items: center;
+    width: 100%;
+    justify-content: space-between;
+  }
+  .name-price h4 {
+    width: 70%;
+  }
+  .name-price p {
+    width: 30%;
+  }
   .price-description {
-    margin-left: 20px;
+    flex-direction: column;
+    justify-content: center;
   }
   .added-to-cart {
     flex-direction: column;
